tests/dataset/tpc-ds/compiler/pl/q70.pl
% Generated by Mochi compiler v0.10.26 on 1970-01-01T00:00:00Z
:- style_check(-singleton).
get_item(Container, Key, Val) :-
    is_dict(Container), !, (string(Key) -> atom_string(A, Key) ; A = Key), get_dict(A, Container, Val).
get_item(Container, Index, Val) :-
    string(Container), !, string_chars(Container, Chars), nth0(Index, Chars, Val).
get_item(List, Index, Val) :- nth0(Index, List, Val).

to_list(Str, L) :-
    string(Str), !,
    string_chars(Str, L).
to_list(L, L).

count(V, R) :-
    is_dict(V), !, get_dict('Items', V, Items), length(Items, R).
count(V, R) :-
    string(V), !, string_chars(V, C), length(C, R).
count(V, R) :-
    is_list(V), !, length(V, R).
count(_, _) :- throw(error('count expects list or group')).

avg(V, R) :-
    is_dict(V), !, get_dict('Items', V, Items), avg_list(Items, R).
avg(V, R) :-
    is_list(V), !, avg_list(V, R).
avg(_, _) :- throw(error('avg expects list or group')).
avg_list([], 0).
avg_list(L, R) :- sum_list(L, S), length(L, N), N > 0, R is S / N.

sum(V, R) :-
    is_dict(V), !, get_dict('Items', V, Items), sum_list(Items, R).
sum(V, R) :-
    is_list(V), !, sum_list(V, R).
sum(_, _) :- throw(error('sum expects list or group')).

group_insert(Key, Item, [], [_{key:Key, 'Items':[Item]}]).
group_insert(Key, Item, [G|Gs], [NG|Gs]) :- get_dict(key, G, Key), !, get_dict('Items', G, Items), append(Items, [Item], NItems), put_dict('Items', G, NItems, NG).
group_insert(Key, Item, [G|Gs], [G|Rs]) :- group_insert(Key, Item, Gs, Rs).
group_pairs([], Acc, Res) :- reverse(Acc, Res).
group_pairs([K-V|T], Acc, Res) :- group_insert(K, V, Acc, Acc1), group_pairs(T, Acc1, Res).
group_by(List, Fn, Groups) :- findall(K-V, (member(V, List), call(Fn, V, K)), Pairs), group_pairs(Pairs, [], Groups).

:- use_module(library(http/json)).
load_data(Path, Opts, Rows) :-
    (is_dict(Opts), get_dict(format, Opts, Fmt) -> true ; Fmt = 'json'),
    (Path == '' ; Path == '-' -> read_string(user_input, _, Text) ; read_file_to_string(Path, Text, [])),
    (Fmt == 'jsonl' ->
        split_string(Text, '\n', ' \t\r', Lines0),
        exclude(=(''), Lines0, Lines),
        findall(D, (member(L, Lines), open_string(L, S), json_read_dict(S, D), close(S)), Rows)
    ;
        open_string(Text, S), json_read_dict(S, Data), close(S),
        (is_list(Data) -> Rows = Data ; Rows = [Data])
    ).

expect(Cond) :- (Cond -> true ; throw(error('expect failed'))).

:- initialization(main, main).
main :-
    dict_create(_V0, map, [s_store_sk-1, s_state-"CA", s_county-"Orange"]),
    dict_create(_V1, map, [s_store_sk-2, s_state-"CA", s_county-"Orange"]),
    dict_create(_V2, map, [s_store_sk-3, s_state-"TX", s_county-"Travis"]),
    Store = [_V0, _V1, _V2],
    dict_create(_V3, map, [d_date_sk-1, d_month_seq-1200]),
    dict_create(_V4, map, [d_date_sk-2, d_month_seq-1201]),
    Date_dim = [_V3, _V4],
    dict_create(_V5, map, [ss_sold_date_sk-1, ss_store_sk-1, ss_net_profit-10]),
    dict_create(_V6, map, [ss_sold_date_sk-1, ss_store_sk-2, ss_net_profit-5]),
    dict_create(_V7, map, [ss_sold_date_sk-2, ss_store_sk-3, ss_net_profit-20]),
    Store_sales = [_V5, _V6, _V7],
    Dms is 1200,
    findall(_V19, (member(Ss, Store_sales), member(D, Date_dim), get_item(D, 'd_date_sk', _V8), get_item(Ss, 'ss_sold_date_sk', _V9), (_V8 == _V9), member(S, Store), get_item(S, 's_store_sk', _V10), get_item(Ss, 'ss_store_sk', _V11), (_V10 == _V11), get_item(D, 'd_month_seq', _V12), get_item(D, 'd_month_seq', _V13), ((_V12 >= Dms), (_V13 =< (Dms + 11))), get_item(S, 's_state', _V14), get_item(S, 's_county', _V15), dict_create(_V16, map, [state-_V14, county-_V15]), _V17 = _V16, dict_create(_V18, map, ['Ss'-Ss, 'D'-D, 'S'-S]), _V19 = _V17-_V18), _V20),
    group_pairs(_V20, [], _V21),
    findall(_V32, (member(G, _V21), get_item(G, 'key', _V22), get_item(_V22, 'state', _V23), get_item(G, 'key', _V24), get_item(_V24, 'county', _V25), findall(_V28, (member(X, G), true, get_item(X, 'ss', _V26), get_item(_V26, 'ss_net_profit', _V27), _V28 = _V27), _V29), sum(_V29, _V30), dict_create(_V31, map, [s_state-_V23, s_county-_V25, total_sum-_V30]), _V32 = _V31), _V33),
    Result = _V33,
    json_write_dict(current_output, Result), nl,
    true,
    dict_create(_V34, map, [s_state-"CA", s_county-"Orange", total_sum-15]),
    dict_create(_V35, map, [s_state-"TX", s_county-"Travis", total_sum-20]),
    expect((Result == [_V34, _V35])),
    true.
